--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,7 +3,8 @@
 $body-bg:    #191C37;
 $body-color:  	#FFFF;
 $font-size-base: 1rem;
-
+$nav-link-padding-y: 1rem;
+$nav-link-height: 200rem;
 // Cards Colors
 $card-bg: #212649;
 $card-border-color: #212649;
