--- a/src/app/aaacesa/general-summary/general-summary.component.html
+++ b/src/app/aaacesa/general-summary/general-summary.component.html
@@ -1,3 +1,8 @@
-<p>
-  general-summary works!
-</p>
+<div class="info-box">
+  <span class="info-box-icon" ng-class="color"></span>
+  <div class="info-box-content">
+    <span class="info-box-text">Total de Pendientes</span>
+    <span class="info-box-number">10</span>
+  </div>
+  <!-- /.info-box-content -->
+</div>
