--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,7 +7,78 @@
 
 // Import styles with dark layout
 // If you want to use dark layout uncomment next line
- @import "node_modules/@coreui/coreui-pro/scss/themes/dark/coreui-dark";
+@import "node_modules/@coreui/coreui-pro/scss/themes/dark/coreui-dark";
 
 // If you want to add something do it here
 @import "custom";
+
+/*
+ * Component: Info Box
+ * -------------------
+ */
+.info-box {
+  display: block;
+  min-height: 150px;
+  background: #fff;
+  width: 100%;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  margin-bottom: 15px;
+}
+
+small {
+  font-size: 14px;
+}
+
+.progress {
+  background: rgba(0, 0, 0, .2);
+  margin: 5px -10px 5px -10px;
+  height: 2px;
+}
+
+.info-box-icon {
+  border-top-left-radius: 2px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 2px;
+  display: block;
+  float: right;
+  height: 150px;
+  width: 15px;
+  text-align: center;
+  font-size: 45px;
+  line-height: 90px;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.info-box-content {
+  padding: 5px 10px;
+  margin-left: 90px;
+}
+
+.info-box-number {
+  display: block;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.progress-description,
+.info-box-text {
+  display: block;
+  font-size: 14px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.info-box-text {
+  text-transform: uppercase;
+}
+
+.info-box-more {
+  display: block;
+}
+
+.progress-description {
+  margin: 0;
+}
