--- a/src/app/aaacesa/general-summary/general-summary.component.html
+++ b/src/app/aaacesa/general-summary/general-summary.component.html
@@ -10,7 +10,7 @@
         <span class="info-box-text text-left" style="padding:50% 0 0 0">Solicitudes</span>
       </div>
       <div class="col-xs-12 col-lg-4 text-center" style="padding:0;">
-        <span class="info-box-text text-center" style="padding:50% 0 0 0"><i class="fas fa-plus-circle"></i></span>        
+        <span class="info-box-text text-center" style="padding:40% 0 0 0"><i class="fas fa-plus-circle fa-3x"></i></span>        
       </div>
     </div>
   </div>
