--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-9">
-      
+
       <div class="row" style="margin-bottom:20px;">
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
           <img class="img-fluid" src="https://via.placeholder.com/400x220" />
@@ -20,26 +20,60 @@
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-xl-8">
           <div class="card">
-            <div class="card-header">
-              Cantidad VS Estado
-            </div>
             <div class="card-body">
               <div class="chart-wrapper">
-                <canvas baseChart class="chart"
-                        [datasets]="barChartData"
-                        [labels]="barChartLabels"
-                        [options]="barChartOptions"
-                        [legend]="barChartLegend"
-                        [chartType]="barChartType"
-                        (chartHover)="chartHovered($event)"
-                        (chartClick)="chartClicked($event)"></canvas>
+                <!--<canvas baseChart class="chart"
+                [datasets]="barChartData"
+                [labels]="barChartLabels"
+                [options]="barChartOptions"
+                [legend]="barChartLegend"
+                [chartType]="barChartType"
+                (chartHover)="chartHovered($event)"
+                (chartClick)="chartClicked($event)"></canvas>-->
+                <canvas id="bar-chart-summary" height="298"></canvas>
               </div>
             </div>
           </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-          <div class="col-md-12">
-            commig soon
+          <div class="card">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3" style="padding: 5px 5px 5px 15px">
+                  <small style="font-size:11px; font-weight:bold">Master</small>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3" style="padding: 5px 5px 5px 5px">
+                  <small style="font-size:11px; font-weight:bold">House</small>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3" style="padding: 5px 5px 5px 5px">
+                  <small style="font-size:11px; font-weight:bold">Fecha</small>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3" style="padding: 5px 15px 5px 5px">
+                  <small style="font-size:11px; font-weight:bold">Status</small>
+                </div>
+              </div>
+              <div class="col-xs-12" style="color:aqua"><mat-divider></mat-divider></div>
+              <div class="row" *ngFor="let merch of merchant; let i = index">
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3" style="padding: 15px 5px 15px 15px">
+                  <small class="info-box-text" style="font-size:10px;">{{merch.master}}</small>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3" style="padding: 15px 5px 15px 5px">
+                  <small class="info-box-text" style="font-size:10px;">{{merch.house}}</small>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3" style="padding: 15px 5px 15px 5px">
+                  <small class="info-box-text" style="font-size:10px;">{{merch.date}}</small>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3 text-center" style="padding: 15px 15px 15px 5px">
+                  <small class="info-box-text" style="font-size:10px; font-weight:bold; color:#0AA010" *ngIf="merch.status == 'Transfer'">{{merch.status}}</small>
+                  <small class="info-box-text" style="font-size:10px; font-weight:bold; color:#E2DA0C" *ngIf="merch.status == 'Salida'">{{merch.status}}</small>
+                  <small class="info-box-text" style="font-size:10px; font-weight:bold; color:#FB600A" *ngIf="merch.status == 'Previo'">{{merch.status}}</small>
+                  <small class="info-box-text" style="font-size:10px; font-weight:bold; color:#CF0A2B" *ngIf="merch.status == 'Abandono'">{{merch.status}}</small>
+                </div>
+
+              </div>
+              <div class="col-xs-12" style="color:aqua; margin-bottom:14px"><mat-divider></mat-divider></div>
+              <div class="col-xs-12 text-center"><a href="#" style="color:#6976D2">Ver todo</a></div>
+            </div>
           </div>
         </div>
       </div>
