--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -5,40 +5,79 @@
         <div class="col-md-8 mx-auto">
           <div class="card-group">
             <div class="card p-4">
-              <div class="card-body">
-                <form>
+              <div class="card-body" [hidden]="getPasword">
+                <form #loginForm="ngForm">
                   <h1>Login</h1>
-                  <p class="text-muted">Sign In to your account</p>
+                  <p class="text-muted">Ingresa a tu cuenta</p>
                   <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="icon-user"></i></span>
                     </div>
-                    <input type="text" class="form-control" placeholder="Username" autocomplete="username" required>
+                    <input type="text" class="form-control" 
+                    [(ngModel)]="email" #namelogin="ngModel"
+                    id="emailUser" name="emailUser" 
+                    placeholder="Email Usuario" autocomplete="Email Usuario" required>
                   </div>
                   <div class="input-group mb-4">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="icon-lock"></i></span>
                     </div>
-                    <input type="password" class="form-control" placeholder="Password" autocomplete="current-password" required>
+                    <input type="password" class="form-control" 
+                    [(ngModel)]="password" #passwordxlogin="ngModel"
+                    id="userPassword" name="userPassword" placeholder="Contraseña usuario" autocomplete="Contraseña usuario" required>
                   </div>
                   <div class="row">
                     <div class="col-6">
-                      <button type="button" class="btn btn-primary px-4">Login</button>
+                      <button type="submit"  class="btn btn-primary px-4" (click)="login($event)" >Entrar</button>
                     </div>
                     <div class="col-6 text-right">
-                      <button type="button" class="btn btn-link px-0">Forgot password?</button>
+                      <button type="button" class="btn btn-link px-0" (click)="onRecoveryPassword()" >¿Olvidaste tu contraseña?</button>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-12 text-center">
+                        
+                        <div *ngIf="validar">
+                           {{message}}
+                        </div>
+                        
                     </div>
                   </div>
                 </form>
               </div>
+              <div class="card-body" [hidden]="!getPasword">
+                  <form>
+                      <p class="text-muted">Ingresa el correo registrado en tu cuenta</p>
+                    <div class="input-group mb-3">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="cui-envelope-open"></i></span>
+                      </div>
+                      <input type="text" class="form-control" 
+                      [(ngModel)]="recuperaEmail" #recuperaEmaillogin="ngModel"  id="recuperaEmail" name="recuperaEmail" placeholder="Correo electronico" autocomplete="Correo electronico" required>
+                    </div>
+                    <div class="row">
+                      <div class="col-6">
+                        <a (click)="resetPassword()"  class="btn btn-primary px-4" >Recuperar</a>
+                      </div>
+                    </div>
+                    <div class="row">
+                    <div class="col-12 text-center">
+                        
+                        <div *ngIf="validar">
+                           {{message}}
+                        </div>
+                        
+                    </div>
+                  </div>
+                  </form>
+                </div>
             </div>
             <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
               <div class="card-body text-center">
-                <div>
-                  <h2>Sign up</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                  <button type="button" class="btn btn-primary active mt-3">Register Now!</button>
-                </div>
+                  <div class="col align-self-center mt-5">
+                    <img src="/assets/img/brand/logo.png" alt="AACESA">
+                    <h2>Bienvenido</h2>
+                  </div>
               </div>
             </div>
           </div>
