--- a/src/app/views/resetpassword/resetpassword.component.html
+++ b/src/app/views/resetpassword/resetpassword.component.html
@@ -6,29 +6,27 @@
             <div class="card-group">
               <div class="card p-4">
                 <div class="card-body">
-                  <form #loginForm="ngForm">
+                  <form #resetPasswForm="ngForm">
                     <h2>Cambiar contraseña</h2>
-                    <p class="text-muted">Ingresa tu nueva contraseña</p>
+                    <p class="text-muted" *ngIf="!mostrar">Ingresa tu nueva contraseña</p>
                     <div class="input-group mb-3" *ngIf="!mostrar">
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="icon-lock"></i></span>
                       </div>
                       <input type="password" class="form-control" 
-                      [(ngModel)]="newPassword1" #namelogin="ngModel"
-                      id="newPassword1" name="newPassword1" 
+                      [(ngModel)]="newPassword" #newPasswordT="ngModel"
+                      id="newPassword1" name="newPassword" 
                       placeholder="Nueva contraseña" autocomplete="Nueva contraseña" required>
                     </div>
-                    <div class="input-group mb-4" *ngIf="!mostrar">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="icon-lock"></i></span>
+                    <div *ngIf="newPasswordT.invalid && (newPasswordT.dirty || newPasswordT.touched)"
+                        class="alert alert-danger">
+                      <div *ngIf="newPasswordT?.errors.required">
+                        Contraseña requerida.
                       </div>
-                      <input type="password" class="form-control" 
-                      [(ngModel)]="newPassword2" #passwordxlogin="ngModel"
-                      id="newPassword2" name="newPassword2" placeholder="Repite contraseña" autocomplete="Repite contraseña" required>
-                    </div>
+                  </div>
                     <div class="row">
-                      <div class="col-6">
-                        <button type="submit"  class="btn btn-primary px-4" (click)="resetPassword($event)" >Cambiar</button>
+                      <div class="col-6" *ngIf="!mostrar">
+                        <button type="submit"  class="btn btn-primary px-4" (click)="resetPassword($event)" [disabled]="resetPasswForm.invalid" >Cambiar</button>
                       </div>
                       <div class="col-6 text-right">
                         <a href="/login" class="btn btn-link px-0">Regresar</a>
