Abandono - Date Picker
Date Picker para abandono

--- a/src/app/aaacesa/abandono/abandono.component.html
+++ b/src/app/aaacesa/abandono/abandono.component.html
@@ -18,7 +18,7 @@
               <div class="col-sm-3">
                   <input type="text" class="form-control" [(ngModel)]="filterQuery" placeholder="Guía House"/>
               </div>
-              <div class="col-sm-4">
+              <div class="col-sm-4 form-group">
                   <div class="input-group">
                       <div class="input-group-prepend">
                          <span class="input-group-text"><i class="fa fa-calendar"></i></span>
